--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="pictures/logo1.png" alt="" width="60" height="65" class="d-inline-block align-text-top">
+            <img src="pictures/logo.png" alt="" width="70" height="70" class="d-inline-block align-text-top">
           </a>      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,25 +30,47 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ice Cream</a>
+            <a class="nav-link" href="icecream.html">Ice Cream</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Treats and Candy</a>
+            <a class="nav-link" href="candy.html">Treats and Candy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacts Us</a>
+            <a class="nav-link" href="contact.html">Contacts Us</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   <body>
-    <h1>Ice Cream</h1>
+    <h1>Peppermint Addie-Co</h1>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="pictures/mint-sherbert_1.png" alt="">
+        </div>
+        <div class="carousel-item">
+          <img src="pictures/oragne-sherbert.png" alt="">
+        </div>
+        <div class="carousel-item">
+          <img src="pictures/lemon-ice-cream.png" alt="">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+       
 
-
+    
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
