--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="pictures/logo1.png" alt="" width="60" height="65" class="d-inline-block align-text-top">
+            <img src="pictures/logo.png" alt="" width="60" height="65" class="d-inline-block align-text-top">
           </a>      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
