--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="pictures/mint-sherbert_1.png" alt="">
+          <img src="pictures/R.png" alt="lemon">
         </div>
         <div class="carousel-item">
-          <img src="pictures/oragne-sherbert.png" alt="">
+          <img src="pictures/ice-cream.png" alt="cones" >
         </div>
         <div class="carousel-item">
-          <img src="pictures/lemon-ice-cream.png" alt="">
+          <img src="pictures/3-new.jpg" alt="small ice cream" >
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -68,6 +68,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
+
        
 
     
