--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
   </nav>
   <body>
     <h1>About us</h1>
-
-
-    
+<div>
+<img src="pictures/MicrosoftTeams-image (3).png" class="peppermint" alt="" >
+</div>
     
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
