--- a/contact.html
+++ b/contact.html
@@ -39,14 +39,46 @@
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contacts Us</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   <body>
-    <h1>Conact us</h1>
+    <h1>Contact us</h1>
+    <section class="contact">
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-5">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="button" class="btn btn-outline-secondary">Send</button>
+          </div>
+          <div class="col-md-5">
+            <img src="pictures/logo.png" alt="Contact Image">
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="gradient">
+      <div class="container-fluid text-center">
+        <span></span>
+      </div>
+  
+
+     <h2>FAQ </h2>
+
+
+
+    </footer>
+    
 
 
     
