--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="pictures/R.png" alt="lemon">
+          <img src="pictures/MicrosoftTeams-image.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="pictures/ice-cream.png" alt="cones" >
+          <img src="pictures/MicrosoftTeams-image (3).png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="pictures/3-new.jpg" alt="small ice cream" >
+          <img src="pictures/MicrosoftTeams-image (2).png" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -68,6 +68,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    
 
     <h2>about the times we had </h2> 
     <body> </body> 
