--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <div class="carousel-item">
           <img src="pictures/MicrosoftTeams-image (2).png" class="d-block w-100" alt="...">
         </div>
+        <div class="carousel-item">
+          <img src="pictures/MicrosoftTeams-image (1).png" class="d-block w-100" alt="...">
+        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -69,8 +72,33 @@
       </button>
     </div>
     
+    <h2 class="pt-4">Who Are We?</h2>
+    <div class="container">
+      <div class="row my-3 g-3">
+        <div class="col-md-4"><img src="pictures/peppermint-icecream.png" alt="Gallery Image" class="img-fluid">
+          <div class="card-body">
+            <h5 class="card-title">Our Ice Cream</h5>
+            <button class="btn btn-primary" type="submit">More</button>
 
-    <h2>about the times we had </h2> 
+          </div>
+        </div>
+        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+          <div class="card-body">
+            <h5 class="card-title">Chocolate</h5>
+            <p class="card-text">things about chocolate.</p>
+          </div>
+        </div>
+        <div class="col-md-4"><img src="pictures/chocolate icecream.jpeg" alt="Gallery Image" class="img-fluid">
+          <div class="card-body">
+            <h5 class="card-title">Chocolate</h5>
+            <p class="card-text">things about chocolate.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    
     <body> </body> 
 
 
