--- a/about.html
+++ b/about.html
@@ -27,16 +27,16 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="icecream.html">Ice Cream</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="candy.html">Treats and Candy</a>
+            <a class="nav-link" href="candy.html">Meals</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About Us</a>
+            <a class="nav-link active" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacts Us</a>
