--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="style.css">
     <title>PeppermintAddie&Co</title>
   </head>
+  <body>
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
     </div>
@@ -45,12 +46,27 @@
       </div>
     </div>
   </nav>
-  <body>
     <h1>About us</h1>
-<div>
-<img src="pictures/MicrosoftTeams-image (3).png" class="peppermint" alt="" >
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+      <img src="pictures/MicrosoftTeams-image (3).png" class="peppermint" alt=""> 
+		</div>
+		<div class="col-md-6 rara">
+      <p>hey</p>
+		</div>
+	</div>
 </div>
-    
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 rara">
+    <p>This is </p>
+		</div>
+		<div class="col-md-6">
+      <img src="pictures/MicrosoftTeams-image (3).png" class="peppermint" alt=""> 
+		</div>
+	</div>
+</div>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
