--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     <div class="container">
       <div class="row my-3 g-3">
         <div class="col-md-4">
-          <div class="card" style="width: 25rem;">
+              <h5 class="card-title">Meals</h5>
+          <div class="card h-100" style="width: 25rem;">
             <img src="pictures/peppermint-icecream.png" class="card-img-top" alt="peppermint-icecream">
             <div class="card-body">
               <h5 class="card-title">Our Ice Cream</h5>
@@ -91,7 +92,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 25rem;">
+          <div class="card h-100" style="width: 25rem;">
             <img src="pictures/MicrosoftTeams-image (1).png" class="card-img-top" alt="more Meals">
             <div class="card-body">
               <h5 class="card-title">Meals</h5>
@@ -101,8 +102,8 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card" style="width: 25rem;">
-            <img src="pictures/peppermint-icecream.png" class="card-img-top" alt="Our company">
+          <div class="card h-100" style="width: 25rem;">
+            <img src="pictures/MicrosoftTeams-image (3).png" class="card-img-top" alt="Our company">
             <div class="card-body">
               <h5 class="card-title">More About Us</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
