--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="icecream.html">Ice Cream</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="candy.html">Meals</a>
+            <a class="nav-link" href="meals.html">Meals</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
@@ -46,29 +46,55 @@
     </div>
   </nav>
   <body>
-    <h1>Contact us</h1>
-    <section class="contact">
-      <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-md-5">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    
+      <h2>FAQ</h2>
+
+<h3 class="FAQ"> What is our purpose? </h3>
+    
+
+<P class="answers">
+Our purpose is to bring smiles not only to the young, but to our older audience as well. 
+We want to connect to both groups by giving them a memory they wont forget.
+</p>
+<h3 class="FAQ"> Why icecream? </h3>
+
+<P class="answers">
+ Icecream has been addies main dream parolor. Icecream is a delectable treat that everyone can enjoy. All age groups love icecream and we are sure you will too!
+  </p>
+
+  <h3 class="FAQ"> How could we support? </h3>
+  <P class="answers">
+    The community has shown mass support and we are very greatful. A way to show some more support is too promote us on your social media online!
+    We have an instagram and a facebook page!
+    </p>
+
+
+
+<h2> Find Us! </h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.5833458272723!2d-88.82099908438919!3d35.613343041298855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x887ea146afc06399%3A0x5fb7645ed2447d1b!2sPeppermint%20Addie%E2%80%99s%20%26%20co!5e0!3m2!1sen!2sus!4v1638211646909!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+      <h1>Contact us</h1>
+      <section class="contact">
+        <div class="container">
+          <div class="row align-items-center justify-content-center">
+            <div class="col-md-5">
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Send us a message!</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <button type="button" class="btn btn-outline-secondary">Send</button>
             </div>
-            <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label">Send us a message!</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <div class="col-md-5">
+              <img src="pictures/logo.png" alt="Contact Image">
             </div>
-            <button type="button" class="btn btn-outline-secondary">Send</button>
-          </div>
-          <div class="col-md-5">
-            <img src="pictures/logo.png" alt="Contact Image">
           </div>
         </div>
-      </div>
-    </section>
-    <section>
-      <h2>FAQ</h2>
+      </section>
+      <section>
 
 
 <footer class="text-center text-lg-start bg-light text-muted">
@@ -115,7 +141,7 @@
           <p><i class="fas fa-home me-3"></i> Jackson,TN</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
-            info@example.com
+            Peppermintaddie@yahoo.com
           </p>
           <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
           <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
