--- a/meals.html
+++ b/meals.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="icecream.html">Ice Cream</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="candy.html">Meals</a>
+            <a class="nav-link active" href="meals.html">Meals</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
@@ -46,7 +46,6 @@
     </div>
   </nav>
   <body>
-    <h1>Meals</h1>
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -67,6 +66,31 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+    <h2>Our Meals</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 food">
+          <h3>Breakfast</h3>
+          <h4>
+          <ul class="breakfast">
+            <li>Bacon, egg, & cheese... 4.00</li>
+            <li>Sausage, egg, & cheese... 4.00</li>
+            <li>Cereal Bowl... 2.00</li>
+            <li>Mini Doughnuts(6)... 3.00</li>
+            <li>Black Coffee... 2.00</li>
+          </ul>
+          </h4>
+        </div>
+        <div class="col-md-6 food">
+          <h3>Lunch</h3>
+          <h4>
+            <ul class="lunch">
+              Classic Grilled Cheese... 3.00 
+            </ul>
+          </h4>
+        </div>
+      </div>
     </div>
 
     <footer class="text-center text-lg-start bg-light text-muted">
