--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="icecream.html">Ice Cream</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="candy.html">Meals</a>
+            <a class="nav-link" href="meals.html">Meals</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="about.html">About Us</a>
@@ -53,7 +53,7 @@
       <img src="pictures/MicrosoftTeams-image (3).png" class="peppermint" alt=""> 
 		</div>
 		<div class="col-md-6 rara">
-      <p>hey</p>
+      <p>This is Addie, she </p>
 		</div>
 	</div>
 </div>
