--- a/icecream.html
+++ b/icecream.html
@@ -34,7 +34,7 @@
             <a class="nav-link active" href="icecream.html">Ice Cream</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="candy.html">Meals</a>
+            <a class="nav-link" href="meals.html">Meals</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
