--- a/meals.html
+++ b/meals.html
@@ -68,17 +68,25 @@
       </button>
     </div>
     <h2>Our Meals</h2>
-    <div class="container">
+    <div class="container yes">
       <div class="row">
         <div class="col-md-6 food">
           <h3>Breakfast</h3>
           <h4>
           <ul class="breakfast">
             <li>Bacon, egg, & cheese... 4.00</li>
-            <li>Sausage, egg, & cheese... 4.00</li>
-            <li>Cereal Bowl... 2.00</li>
-            <li>Mini Doughnuts(6)... 3.00</li>
-            <li>Black Coffee... 2.00</li>
+            <li class="yes">Sausage, egg, & cheese... 4.00</li>
+            <li class="yes">Cereal Bowl... 2.00</li>
+            <li class="yes">Mini Doughnuts(6)... 3.00</li>
+            <li class="yes">Black Coffee... 2.00</li>
+          </ul>
+          </h4>
+          <h3 class="ok">Floats</h3>
+          <h4>
+          <ul class="breakfast">
+            <li>Root Beer Float</li>
+            <li></li>
+            <li></li>
           </ul>
           </h4>
         </div>
@@ -87,6 +95,24 @@
           <h4>
             <ul class="lunch">
               Classic Grilled Cheese... 3.00 
+            </ul>
+            <ul class="lunch yes">
+              KICK'D UP GRILLED CHEESE... 6.49
+              <h5>Includes grilled chicken and special sauces </h5>
+            </ul>
+            <ul class="lunch yes">
+              LOADED POTATOES... 6.49
+              <h5>Classic</h5>
+              <h5>Pull Pork</h5>
+              <h5>Grilled Chicken Ranch</h5>
+            </ul>
+            <ul class="lunch yes">
+              SOUPS(VARY PER DAY)... 4.00
+              <h5>Potato Soup (Served Daily)</h5>
+              <h5>White Chicken Chili</h5>
+              <h5>Clam Chowder</h5>
+              <h5>Chicken Tortilla </h5>
+              <h5>Butternut Squash/Apple</h5>
             </ul>
           </h4>
         </div>
