--- a/index.html
+++ b/index.html
@@ -81,31 +81,31 @@
     <div class="container">
       <div class="row my-3 g-3">
         <div class="col-md-4">
-          <div class="card">
-            <img src="pictures/peppermint-icecream.png" class="card-img-top" alt="peppermint-icecream">
+          <div class="card" style="height: 35rem;">
+            <img src="pictures/peppermint-icecream.png" class="card-img-top" style="height: 28rem;" alt="peppermint-icecream">
             <div class="card-body">
               <h5 class="card-title">Our Ice Cream</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">al;dkfjalksdhf</p>
               <a href="icecream.html" class="btn btn-primary">More</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img src="pictures/MicrosoftTeams-image (1).png" class="card-img-top" alt="more Meals">
+          <div class="card" style="height: 35rem;">
+            <img src="pictures/MicrosoftTeams-image (1).png" class="card-img-top" style="height: 28rem;" alt="more Meals">
             <div class="card-body">
               <h5 class="card-title">Meals</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="candy.html" class="btn btn-primary">More</a>
+              <p class="card-text"> We have good meals </p>
+              <a href="meals.html" class="btn btn-primary">More</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img src="pictures/MicrosoftTeams-image (3).png" class="card-img-top" alt="Our company">
+          <div class="card" style="height: 35rem;">
+            <img src="pictures/MicrosoftTeams-image (3).png" class="card-img-top" style="height: 28rem;" alt="Our company">
             <div class="card-body">
               <h5 class="card-title">More About Us</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">akdhfkdahf </p>
               <a href="about.html" class="btn btn-primary">More</a>
             </div>
           </div>
