--- a/about.html
+++ b/about.html
@@ -53,7 +53,11 @@
       <img src="pictures/MicrosoftTeams-image (3).png" class="peppermint" alt=""> 
 		</div>
 		<div class="col-md-6 rara">
-      <p>This is Addie, she </p>
+      <p> This is Addie, founder of Peppermint Addie And Co, located Jackson, TN. Addie, with the support of her family, runs jacksons local icecream parlor. 
+Our goal for the future is to bring the community of jackson together. We want to bring all ages alike using the power of icecream. Ice cream is an aswesome treat that new and old members will enjoy!
+
+
+      </p> 
 		</div>
 	</div>
 </div>
