--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <img src="pictures/peppermint-icecream.png" class="card-img-top" style="height: 28rem;" alt="peppermint-icecream">
             <div class="card-body">
               <h5 class="card-title">Our Ice Cream</h5>
-              <p class="card-text">al;dkfjalksdhf</p>
+              <p class="card-text"></p>
               <a href="icecream.html" class="btn btn-primary">More</a>
             </div>
           </div>
@@ -95,7 +95,7 @@
             <img src="pictures/MicrosoftTeams-image (1).png" class="card-img-top" style="height: 28rem;" alt="more Meals">
             <div class="card-body">
               <h5 class="card-title">Meals</h5>
-              <p class="card-text"> We have good meals </p>
+              <p class="card-text"></p>
               <a href="meals.html" class="btn btn-primary">More</a>
             </div>
           </div>
@@ -105,7 +105,7 @@
             <img src="pictures/MicrosoftTeams-image (3).png" class="card-img-top" style="height: 28rem;" alt="Our company">
             <div class="card-body">
               <h5 class="card-title">More About Us</h5>
-              <p class="card-text">akdhfkdahf </p>
+              <p class="card-text"> </p>
               <a href="about.html" class="btn btn-primary">More</a>
             </div>
           </div>
